# resgate_arqueologico_backend

./: .env  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_player.py  0002_playerquiz.py  0003_playerquiz_score.py  0003_quiz.py  0004_remove_player_xp_player_score.py  0004_rename_nome_classroom_name.py  0005_alter_player_score.py  0005_quiz_image_question.py  0006_alter_question_id_quiz_playerquiz.py  0006_alter_question_statement.py  0007_playerquestion.py  0008_alter_playerquestion_unique_together.py  0008_remove_player_id_classroom.py  0009_alter_playerquiz_options_and_more.py  0009_remove_player_user_player_photo_player_username.py  0010_alter_player_username.py  0011_remove_player_photo_player_path_foto.py  0012_alter_player_path_foto.py  0013_rename_path_foto_player_photo_path.py  0014_alter_player_xp.py
core/models/: __init__.py  classroom.py  player.py  player_question.py  player_quiz.py  question.py  quiz.py
core/serializers/: __init__.py  classroom.py  player.py  player_question.py  player_quiz.py  question.py  quiz.py  user.py
core/views/: __init__.py  classroom.py  player.py  player_question.py  player_quiz.py  question.py  quiz.py  user.py
infra/: cloudinary.py  helpers.py
usuario/: managers.py  models.py  serializers.py
usuario/migrations/: 0001_initial.py
